--- a/latex/used_pkgs.bib
+++ b/latex/used_pkgs.bib
@@ -78,14 +78,6 @@
   url = {https://CRAN.R-project.org/package=forcats},
 }
 
-@Manual{R-fs,
-  title = {fs: Cross-Platform File System Operations Based on libuv},
-  author = {Jim Hester and Hadley Wickham and Gábor Csárdi},
-  year = {2023},
-  note = {R package version 1.6.2},
-  url = {https://CRAN.R-project.org/package=fs},
-}
-
 @Manual{R-ggalt,
   title = {ggalt: Extra Coordinate Systems, Geoms, Statistical Transformations,
 Scales and Fonts for ggplot2},
@@ -131,16 +123,17 @@ ggplot2},
 @Manual{R-jsonlite,
   title = {jsonlite: A Simple and Robust JSON Parser and Generator for R},
   author = {Jeroen Ooms},
-  year = {2022},
-  note = {R package version 1.8.4},
-  url = {https://CRAN.R-project.org/package=jsonlite},
+  year = {2023},
+  note = {R package version 1.8.7},
+  url = {https://jeroen.r-universe.dev/jsonlite
+https://arxiv.org/abs/1403.2805},
 }
 
 @Manual{R-knitr,
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
   year = {2023},
-  note = {R package version 1.42},
+  note = {R package version 1.43},
   url = {https://yihui.org/knitr/},
 }
 
@@ -199,7 +192,7 @@ Cattell Scree Test},
 Research},
   author = {William Revelle},
   year = {2023},
-  note = {R package version 2.3.3},
+  note = {R package version 2.3.6},
   url = {https://personality-project.org/r/psych/
 https://personality-project.org/r/psych-manual.pdf},
 }
@@ -224,7 +217,7 @@ https://personality-project.org/r/psych-manual.pdf},
   title = {raster: Geographic Data Analysis and Modeling},
   author = {Robert J. Hijmans},
   year = {2023},
-  note = {R package version 3.6-20},
+  note = {R package version 3.6-23},
   url = {https://rspatial.org/raster},
 }
 
@@ -272,7 +265,7 @@ https://personality-project.org/r/psych-manual.pdf},
   title = {sp: Classes and Methods for Spatial Data},
   author = {Edzer Pebesma and Roger Bivand},
   year = {2023},
-  note = {R package version 1.6-0},
+  note = {R package version 2.0-0},
   url = {https://CRAN.R-project.org/package=sp},
 }
 
@@ -314,6 +307,14 @@ https://personality-project.org/r/psych-manual.pdf},
   year = {2023},
   note = {R package version 0.6.3},
   url = {https://CRAN.R-project.org/package=viridis},
+}
+
+@Manual{R-xtable,
+  title = {xtable: Export Tables to LaTeX or HTML},
+  author = {David B. Dahl and David Scott and Charles Roosen and Arni Magnusson and Jonathan Swinton},
+  year = {2019},
+  note = {R package version 1.8-4},
+  url = {http://xtable.r-forge.r-project.org/},
 }
 
 @Article{brms2017,
@@ -467,7 +468,7 @@ https://personality-project.org/r/psych-manual.pdf},
 }
 
 @Article{sp2005,
-  author = {Edzer J. Pebesma and Roger S. Bivand},
+  author = {Edzer J. Pebesma and Roger Bivand},
   title = {Classes and methods for spatial data in {R}},
   journal = {R News},
   year = {2005},
